--- a/locales/BR/pt/default.properties
+++ b/locales/BR/pt/default.properties
@@ -1,9 +1,5 @@
 actions=ações
 submit=salvar
 cancel=cancelar
-back=voltar
-toggle_navigation=Toggle navigation***
-access=acesso
-new=novo
-list=lista
-settings=opções
+welcome_title=Bem vindo a
+welcome_hello=Ola
