--- a/locales/US/en/default.properties
+++ b/locales/US/en/default.properties
@@ -1,9 +1,5 @@
-actions=actions
-submit=submit
-cancel=cancel
-back=back
-toggle_navigation=Toggle navigation
-access=access
-new=new
-list=list
-settings=settings
+actions=ações
+submit=salvar
+cancel=cancelar
+welcome_title=Welcome to
+welcome_hello=Hello
